dropshot/tests/fail/bad_endpoint4.stderr
error[E0277]: the trait bound `QueryParams: ExtractedParameter` is not satisfied
   --> $DIR/bad_endpoint4.rs:22:14
    |
22  |     _params: Query<QueryParams>,
    |              ^^^^^^^^^^^^^^^^^^ the trait `ExtractedParameter` is not implemented for `QueryParams`
    |
   ::: $WORKSPACE/dropshot/src/handler.rs
    |
    | pub struct Query<QueryType: DeserializeOwned + ExtractedParameter + Send + Sync>
    |                                                ------------------ required by this bound in `dropshot::Query`
    |
    = note: required because of the requirements on the impl of `dropshot::handler::ExtractedParameter` for `QueryParams`

error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
   --> $DIR/bad_endpoint4.rs:22:14
    |
22  |     _params: Query<QueryParams>,
    |              ^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
    |
   ::: $WORKSPACE/dropshot/src/handler.rs
    |
    | pub struct Query<QueryType: DeserializeOwned + ExtractedParameter + Send + Sync>
    |                             ---------------- required by this bound in `dropshot::Query`
    |
    = note: required because of the requirements on the impl of `serde::de::DeserializeOwned` for `QueryParams`
